# EndlessNight

./: CMakeLists.txt  README.md  macos.sh  main.cpp  windows.cmd
Bullet/: Bullet.cpp  Bullet.hpp
Enemy/: Enemy.cpp  Enemy.hpp
Engine/: Animation.cpp  Animation.hpp  AudioHelper.cpp  AutoScroller.cpp  AutoScroller.hpp  GameEngine.cpp  GameEngine.hpp  Group.cpp  Group.hpp  IControl.cpp  IControl.hpp  IScene.hpp  Sprite.cpp  Sprite.hpp  User.cpp  User.hpp  UserManager.cpp  UserManager.hpp
Firebase/: FirebaseAuth.cpp  FirebaseAuth.hpp
Item/: Coin.cpp  Coin.hpp  DamageFlask.cpp  DamageFlask.hpp  Heal.cpp  Heal.hpp  Item.cpp  Item.hpp  Light.cpp  Light.hpp  SpeedFlask.cpp  SpeedFlask.hpp
Player/: Player.cpp  Player.hpp
Resource/: map1.txt  map2.txt  mapRule.txt  scoreboard.txt  userDatas.txt
Scene/: LoginOrRegisterScene.cpp  LoginOrRegisterScene.hpp  LoginScene.cpp  LoginScene.hpp  LoseScene.cpp  LoseScene.hpp  PlayScene.cpp  PlayScene.hpp  RegisterScene.cpp  RegisterScene.hpp  ScoreBoardScene copy.cpp  ScoreBoardScene copy.hpp  ScoreBoardScene.cpp  ScoreBoardScene.hpp  SettingsScene.cpp  SettingsScene.hpp  StartScene.cpp  StartScene.h  StoryScene.cpp  StoryScene.hpp  WinScene.cpp  WinScene.hpp
UI/Component/: Image.cpp  Image.hpp  Label.hpp  MiniMap.cpp  MiniMap.hpp  Pause.cpp  Slider.cpp  TextInput.cpp  TextInput.hpp
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  EndlessNights  build.ninja  cmake_install.cmake
